# s3-cli-tool

./: .env.example  .gitignore  README.md  pyproject.toml
s3_scli_tool/: cli.py  config.py  logging_setup.py  mime_validation.py  s3_service.py
tests/: test_mime_validation.py  test_organize_extensions.py  test_policy.py  test_uploads.py  test_versioning.py
