[tool.poetry]
name = "s3-scli-tool"
version = "0.1.0"
description = "CLI tool for working with AWS S3 buckets"
authors = ["s3-scli-tool"]
readme = "README.md"
packages = [{ include = "s3_scli_tool" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
boto3 = "^1.39.0"
python-dotenv = "^1.1.1"
typer = "^0.17.4"
filetype = "^1.2.0"
python-magic = "^0.4.27"
python-magic-bin = { version = "^0.4.14", markers = "sys_platform == 'win32'" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"

[tool.poetry.scripts]
s3cli = "s3_scli_tool.cli:run"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
